modules/networking/route.tf
#####################
# Public route
#####################

resource "aws_route_table" "public-rt" {
  vpc_id = "${aws_vpc.vpc1.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }

  tags = {
    Name = "Public Route Table"
  }
}

resource "aws_route_table_association" "public-rt-assoc" {
  subnet_id = "${aws_subnet.public-subnet.id}"
  route_table_id = "${aws_route_table.public-rt.id}"
}
