modules/networking/security_groups.tf
#####################
# security groups of instances
#####################

resource "aws_security_group" "sg-ssh-http" {
  name = "ssh-http"
  description = "Allow incoming HTTP and SSH"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks =  ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  vpc_id="${aws_vpc.vpc1.id}"

  tags =  {
    Name = "SSH and HTTP SG"
  }
}

output "sg_id" {
  value = "${aws_security_group.sg-ssh-http.id}"
}
